Changed score to percentage

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       },
 
       templateResult: function(e) {
-      o = e.name + "(Score " + e.score + ")";
+      o = e.name + "(" + e.score + " % match)";
       return o; },
       templateSelection: function(e) { return e.name; }
     });
